# Minecraf_Block_Finder

./: .gitignore  CMakeLists.txt  README.md  block positions.csv  block positions.xlsx  note for futur.txt
Finder/: CMakeLists.txt
Finder/Coordinate/: CMakeLists.txt
Finder/Coordinate/include/Coordinate/: Coordinate.hpp
Finder/Coordinate/src/: CMakeLists.txt  Coordinate.cpp
Finder/Coordinate/tests/: CMakeLists.txt  Coordinate_test.cpp
Finder/Utility/: CMakeLists.txt
Finder/Utility/include/Utility/: Coordinate.h
Finder/Utility/src/: CMakeLists.txt  Coordinate.cpp  Utility.cpp
Finder/include/Finder/: BlockFinder.hpp  DataExtractor.hpp  DimBlockFinder.hpp  RegionBlockFinder.hpp
Finder/src/: BlockFinder.cpp  CMakeLists.txt  CmakeLists.txt  DataExtractor.cpp  DimBlockFinder.cpp  RegionBlockFinder.cpp
Finder/tests/: CMakeLists.txt
Minecraft_Block_Finder/: Minecraft_Block_Finder.sln  test.json
Minecraft_Block_Finder/ConsoleApplication1/: ConsoleApplication1.vcxproj
Minecraft_Block_Finder/Minecraft_Block_Finder/: MinecraftBlockFinder.cpp  Minecraft_Block_Finder.cpp  Minecraft_Block_Finder.vcxproj  Minecraft_Block_Finder.vcxproj.filters  argparse.hpp  test.json
Minecraft_Block_Finder/Minecraft_Block_Finder/Finder/include/: BlockFinder.h  DataExtractor.h
Minecraft_Block_Finder/Minecraft_Block_Finder/Finder/src/: BlockFinder.cpp  RegionBlockFinder.cpp
Minecraft_Block_Finder/Minecraft_Block_Finder/Output/include/: AbstractOutput.h  CSVOutput.h  ConsoleOutput.h  Output.h
Minecraft_Block_Finder/Minecraft_Block_Finder/Output/src/: AbstractOutput.cpp  Output.cpp
Minecraft_Block_Finder/Minecraft_Block_Finder/Utility/include/: Coordinate.h  Utility.h
Minecraft_Block_Finder/test/: test.vcxproj  test.vcxproj.filters
Output/src/: CSVOutput.cpp  ConsoleOutput.cpp
apps/: CMakeLists.txt  MinecraftBlockFinder.cpp  test.cpp
src/: CMakeLists.txt
unit_test_references/reference_files/csv/: DIM0_1.csv  DIM0_41.csv  DIM0_42.csv  DIM0_49.csv  DIM0_57.csv
unit_test_references/reference_files/excel/: DIM0_1.xlsx  DIM0_41.xlsx  DIM0_42.xlsx  DIM0_49.xlsx  DIM0_57.xlsx
unit_test_references/unit_test_world/: level.dat_old
unit_test_references/unit_test_world/DIM-1/region/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
unit_test_references/unit_test_world/advancements/: e3a7773d-5565-42db-9eb7-d6508b5b3148.json
unit_test_references/unit_test_world/region/: r.-1.-10.mca  r.-1.9.mca  r.-10.-1.mca  r.-10.-10.mca  r.-10.-2.mca  r.-10.-3.mca  r.-10.-4.mca  r.-10.-5.mca  r.-10.-6.mca  r.-10.-7.mca  r.-10.-8.mca  r.-10.-9.mca  r.-10.0.mca  r.-10.1.mca  r.-10.2.mca  r.-10.3.mca  r.-10.4.mca  r.-10.5.mca  r.-10.6.mca  r.-10.7.mca  r.-10.8.mca  r.-10.9.mca  r.-2.-10.mca  r.-2.9.mca  r.-3.-10.mca  r.-3.9.mca  r.-4.-10.mca  r.-4.9.mca  r.-5.-10.mca  r.-5.9.mca  r.-6.-10.mca  r.-6.9.mca  r.-7.-10.mca  r.-7.9.mca  r.-8.-10.mca  r.-8.9.mca  r.-9.-10.mca  r.-9.9.mca  r.0.-10.mca  r.0.9.mca  (+36 more)
unit_test_references/unit_test_world/stats/: e3a7773d-5565-42db-9eb7-d6508b5b3148.json
